--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <img src="./RECTOR.PNG" alt="Rector Aron Acuña" class="rector-img">
     <div class="rector-text">
       <h2>Rector Supremo de UPPAC</h2>
-      <h1>👨‍💻 Aron Acuña</h1>
+      <h1>👨‍💻 Aroon Acuña</h1>
       <p>
         Fundador, programador legendario y memeador profesional. Lidera UPPAC con la visión clara de que
         <strong>cada línea de código tiene derecho a fallar… pero con estilo.</strong>
@@ -78,7 +78,7 @@
 
 
   <footer class="main-footer">
-    <p>© 2025 UPPAC - Universidad para Programadores Aron Acuña. Todos los derechos reservados... y los errores también.</p>
+    <p>© 2025 UPPAC - Universidad para Programadores Aroon Acuña. Todos los derechos reservados... y los errores también.</p>
   </footer>
 </body>
 </html>
