--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <img src="./RECTOR.PNG" alt="Rector Aron Acuña" class="rector-img">
     <div class="rector-text">
       <h2>Rector Supremo de UPPAC</h2>
-      <h1>👨‍💻 Aaron Acuña</h2><h1>Mas conocido como El Tayron</h2>
+      <h1>👨‍💻 Aaron Acuña</h1><h2>Mas conocido como: Dibujito</h2>
 
       <p>
         Fundador, programador legendario y memeador profesional. Lidera UPPAC con la visión clara de que
